--- a/src/assets/stylesheets/Header.css
+++ b/src/assets/stylesheets/Header.css
@@ -1,16 +1,13 @@
 .solar__header__container {
-    margin: auto;
+    margin-inline: auto;
+    margin-bottom: 1.5em;
     padding: 1rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
 }
 
 .solar__header {
     text-align: center;
     letter-spacing: 0.25em;
-    font-size: 2.5em;
+    font-size: 2em;
     text-transform: uppercase;
     font-style: italic;
     font-weight: 900;
