--- a/src/assets/stylesheets/Header.css
+++ b/src/assets/stylesheets/Header.css
@@ -1,15 +1,34 @@
 .solar__header__container {
-    margin-inline: auto;
-    margin-bottom: 1.5em;
-    padding: 1rem;
+  margin-inline: auto;
+  margin-bottom: 1.5em;
+  padding: 1rem;
 }
 
 .solar__header {
-    text-align: center;
-    letter-spacing: 0.25em;
-    font-size: 2em;
-    text-transform: uppercase;
-    font-style: italic;
-    font-weight: 900;
+  cursor: pointer;
+  text-align: center;
+  letter-spacing: 0.25em;
+  font-size: 2em;
+  text-transform: uppercase;
+  font-style: italic;
+  font-weight: 900;
+  color: var(--solar-yellow);
+  transition: 1s ease-in-out;
+}
+
+.solar__header:hover {
+  color: var(--solar-red);
+  animation: colorShift 2s ease-in-out;
+}
+
+@keyframes colorShift {
+  0% {
     color: var(--solar-yellow);
+  }
+  50% {
+    color: var(--solar-gray);
+  }
+  100% {
+    color: var(--solar-red);
+  }
 }
